# Bin_pind

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROGRESS.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: deps.py  exceptions.py  main.py  settings.py
apps/api/app/models/: base.py
apps/extension/: .env.example  CLAUDE.md  package.json  popup.tsx
apps/extension/lib/: api.ts  storage.ts  supabase.ts
apps/web/: CLAUDE.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/lib/: api.ts  query-client.ts  supabase.ts
supabase/: CLAUDE.md  config.toml  seed.sql
supabase/migrations/: 20260520000001_enable_rls_videos_places.sql
