[project]
name = "pind-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "geoalchemy2>=0.15.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Validation / settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # AI pipeline
    "google-genai>=0.7.0",
    "faster-whisper>=1.0.3",
    "yt-dlp>=2024.5.1",
    "sentence-transformers>=3.0.0",
    "tenacity>=8.3.0",
    # Logging
    "structlog>=24.2.0",
    # HTTP client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "types-psycopg2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "ANN"]
ignore = [
    "ANN401",  # Any 허용 (파이프라인 타입에서 필요)
    "N818",    # 도메인 예외는 Error suffix 없이 사용 (VideoNotFound, PlaceNotFound 등)
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that call real external APIs (deselect with -m 'not live')",
    "integration: tests requiring Docker DB",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]
